# wasm-huffman

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  package.json  webpack.config.js
.github/workflow/: build.yml
.github/workflows/: build.yml
js/: index.js
src/: lib.rs
static/: index.html
tests/: test.rs
