[package]
name = "wasm-huffman"
description = "huffman on wasm"
version = "0.1.0"
authors = ["Alexis Lowe <alexis.lowe@protonmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.74"
huff-tree-tap = "0.0.2"
hex = "0.4.3"
serde = "1.0.125"
serde_json = "1.0.64"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.51"
features = ["console"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.24"
futures = "0.3.15"
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
